--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,7 @@ input[type=submit] {
     width: 120px;
     height: 40px;
     float: right;
+    margin-top: 2%;
 }
 
 input[type=submit]:hover {
@@ -75,7 +76,12 @@ input[type=date] {
     border-radius: 4px;
 
 }
-
+.error {
+    color: rgb(254, 61, 61); 
+    font-size: 15px;
+    font-weight: bolder;
+    margin-top: 5px;
+  }
 label {
     font-family: 'Montaga', serif;
     font-size: 20px;
@@ -136,7 +142,7 @@ footer>p>strong {
     .col-2,
     input[type=submit] {
         width: 100%;
-        margin-top: 0;
+        margin-top:2%;
     }
     .tile_head,h2{
         color: #1f1f1f;
