--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,7 @@ input[type=submit] {
 input[type=submit]:hover {
     background-color: rgb(53, 247, 163);
 }
-input[type=button] {
+.svebtn{
     border-radius: 40px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 20px;
@@ -81,7 +81,7 @@ input[type=button] {
     margin-top: 2%;
 }
 
-input[type=button]:hover {
+.svebtn:hover {
     background-color: rgb(53, 247, 163);
 }
 textarea,
@@ -167,7 +167,7 @@ footer>p>strong {
         width: 100%;
         margin-top:2%;
     }
-    input[type=button] {
+    .svebtn{
         width: 100%;
         margin-top:2%;
     }
