--- a/css/styles.css
+++ b/css/styles.css
@@ -8,109 +8,26 @@
 /* font-family: 'Montserrat', sans-serif; */
 /* font-family: 'Montaga', serif; */
 /* Styles for mobile devices */
-html {
-    background-color: #999999;
-}
 
-header {
-    background-color: #5f3ce9;
-    font-family: 'Montserrat', sans-serif;
-    color: #90ddf0;
-    font-size: 2vw;
-    padding: 1%;
-    border-bottom: 1px solid #90ddf0;
+header{
+    background-color: cadetblue;
 }
-
-h2 {
-    text-align: center;
-    font-family: 'Montserrat', sans-serif;
-    color: white;
-    font-size: 3vw;
-    padding: 2%;
-
+body {
+    background-color: #000000;
 }
-.tile_head{
-    font-size:2.5vw;
-    color: white;
-    text-decoration: underline;
-}
-main {
-    border-radius: 10px;
-    background-color: #727272;
-    min-height: 90vh;
-    border: 2px solid white;
-    padding: 1% 4%;
-}
-.swiper{
-    height: 90vh;
-}
-.swiper-button-next::after,.swiper-button-prev::after{
-    content: "";
-    font-weight:900;
-    color: rgb(84, 248, 251);
-}
-form{
-    width:85%;
-    margin: 0 auto;
-}
-
-input[type=submit] {
-    border-radius: 40px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 20px;
-    background-color: greenyellow;
-    justify-self: center;
-    width: 180px;
-    height: 40px;
-    float: right;
-    margin-top: 2%;
-}
-
-input[type=submit]:hover {
-    background-color: rgb(53, 247, 163);
-}
-
-textarea,
-input[type=email],
-input[type=tel],
-input[type=text],
-input[type=date] {
+.img_cntainr{
     width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-
+    height: 60%;
+    border-bottom: 1.5px solid black;
 }
-.error {
-    color: rgb(254, 61, 61); 
-    font-size: 15px;
-    font-weight: bolder;
-    margin-top: 5px;
-  }
-label {
-    font-family: 'Montaga', serif;
-    font-size: 20px;
-    color: #90ddf0;
-    padding: 12px 12px 12px 0;
-    display: inline-block;
-}
-.col-1 {
-    float: left;
-    width: 25%;
-    margin-top: 6px;
+img{
+   width: 100%;
+   height: 90%;
+   object-fit: contain;
 }
 
-.col-2 {
-    float: left;
-    width: 75%;
-    margin-top: 6px;
-}
-
-/* Clear floats after the columns */
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
+p{
+    font-weight: 600;
 }
 
 /*Footer section styles*/
@@ -137,37 +54,23 @@ footer>p>strong {
     font-family: 'Montserrat', sans-serif;
 }
 
-/* Mobile enhancements */
-@media screen and (max-width: 600px) {
-    html,main{
-        background-color: rgb(89, 231, 162);
-    }
-    .swiper-button-next::after,.swiper-button-prev::after{
-        content: "";
-        font-weight:900;
-        color: rgb(115, 22, 255);
-    }
-    .col-1,
-    .col-2,
-    input[type=submit] {
-        width: 100%;
-        margin-top:2%;
-    }
-    
-    .tile_head,h2{
-        color: #1f1f1f;
-        font-size: 20px;
-    }
-    label {
-        font-size: 24px;
-        color: #181db5;
-        padding: 12px 12px 12px 0;
-        display: inline-block;
-    }
-    input[type=email],
-    input[type=tel],
-    input[type=text],
-    input[type=date] {
-        height: 48px;
-    }
+/* Media Queries */
+@media (min-width: 576px) {
+body{
+    background-color: khaki;
 }
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) { 
+body{
+    background-color: rgb(96, 206, 160);
+}
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) { 
+body{
+    background-color: black;
+}
+ }
