--- a/css/styles.css
+++ b/css/styles.css
@@ -4,62 +4,27 @@
     padding: 0;
     box-sizing: border-box;
 }
-body{
-    background-image: url("../img/bg1.jpg");
-}
-#scrollspyHeading1{
-    margin-top: 5%;
-}
-main{
-   
-    margin-top: 1%;
-}
-nav .active{
-    text-shadow:
-    0 0 7px #fff,
-    0 0 10px #fff,
-    0 0 21px #fff,
-    0 0 42px #0fa,
-    0 0 82px #0fa,
-    0 0 92px #0fa,
-    0 0 102px #0fa,
-    0 0 151px #0fa; 
-    
-}
-.custom-bg {
-    background-color: rgb(43, 255, 0); /* Red background */
-    color: #000000; 
-    font-size: 150%;
-    border-radius: 10px;
-    padding: 0.4%;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}   
 
-    /* White text for better visibility */
 /* font-family: 'Montserrat', sans-serif; */
 /* font-family: 'Montaga', serif; */
 /* Styles for mobile devices */
-/* header{
+
+header{
     background-color: cadetblue;
 }
 body {
     background-color: #000000;
 }
-.img_cntainr{
-    width: 100%;
-    height: 60%;
-    border-bottom: 1.5px solid black;
-}
 img{
-   width: 100%;
-   height: 90%;
+    margin:0 30%;
+   width: 40%;
+   border-radius: 10px;
    object-fit: contain;
 }
 
 p{
     font-weight: 600;
 }
- */
 
 /*Footer section styles*/
 footer {
@@ -84,24 +49,24 @@ footer p {
 footer>p>strong {
     font-family: 'Montserrat', sans-serif;
 }
-/* 
-Media Queries
-@media (min-width: 576px) {
+
+/* Media Queries */
+/* @media (min-width: 576px) {
 body{
     background-color: khaki;
 }
-}
+} */
 
 /* Medium devices (tablets, 768px and up) */
 /* @media (min-width: 768px) { 
 body{
     background-color: rgb(96, 206, 160);
 }
-}
+} */
 
 /* Large devices (desktops, 992px and up) */
 /* @media (min-width: 992px) { 
 body{
     background-color: black;
 }
- /* } */ 
+ } */
