--- a/css/styles.css
+++ b/css/styles.css
@@ -4,12 +4,45 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    background-color: #000000;
+}
+#scrollspyHeading1{
+    margin-top: 5%;
+}
+.headtext{
+    margin-top:9%;
+}
+main{
+   
+    margin-top: 1%;
+}
+/* nav .active{
+    text-shadow:
+    0 0 7px #fff,
+    0 0 10px #fff,
+    0 0 21px #fff,
+    0 0 42px #0fa,
+    0 0 82px #0fa,
+    0 0 92px #0fa,
+    0 0 102px #0fa,
+    0 0 151px #0fa; 
+    
+} */
+.custom-bg {
+    background-color: rgb(43, 255, 0); /* Red background */
+    color: #000000; 
+    font-size: 150%;
+    border-radius: 10px;
+    padding: 0.4%;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}   
 
+    /* White text for better visibility */
 /* font-family: 'Montserrat', sans-serif; */
 /* font-family: 'Montaga', serif; */
 /* Styles for mobile devices */
-
-header{
+/* header{
     background-color: cadetblue;
 }
 body {
@@ -29,8 +62,62 @@ img{
 p{
     font-weight: 600;
 }
+ */
 
 /*Footer section styles*/
+
+input[type=submit] {
+    border-radius: 40px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    background-color: greenyellow;
+    justify-self: center;
+    width: 120px;
+    height: 40px;
+    float: right;
+}
+
+input[type=submit]:hover {
+    background-color: rgb(53, 247, 163);
+}
+
+textarea,
+input[type=email],
+input[type=tel],
+input[type=text],
+input[type=date] {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+
+}
+
+label {
+    font-family: 'Montaga', serif;
+    font-size: 20px;
+    color: #90ddf0;
+    padding: 12px 12px 12px 0;
+    display: inline-block;
+}
+.mycol-1 {
+    float: left;
+    width: 25%;
+    margin-top: 6px;
+}
+
+.mycol-2 {
+    float: left;
+    width: 75%;
+    margin-top: 6px;
+}
+
+/* Clear floats after the columns */
+.myrow:after {
+    content: "";
+    display: table;
+    clear: both;
+}
 footer {
     background-color: #1f1f1f;
     width: 100%;
@@ -54,23 +141,24 @@ footer>p>strong {
     font-family: 'Montserrat', sans-serif;
 }
 
-/* Media Queries */
-@media (min-width: 576px) {
-body{
-    background-color: khaki;
-}
-}
+/* Mobile enhancements */
+@media screen and (max-width: 600px) {
+    html {
+        background-color: #000000;
+    }
 
-/* Medium devices (tablets, 768px and up) */
-@media (min-width: 768px) { 
-body{
-    background-color: rgb(96, 206, 160);
-}
-}
+    .mycol-1,
+    .mycol-2,
+    input[type=submit] {
+        width: 100%;
+        margin-top: 0;
+    }
 
-/* Large devices (desktops, 992px and up) */
-@media (min-width: 992px) { 
-body{
-    background-color: black;
+    label {
+        font-size: 20px;
+        color: #90ddf0;
+        padding: 12px 12px 12px 0;
+        display: inline-block;
+    }
+
 }
- }
